# order-book-python-sdk

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  validate.yml
examples/: cancel_order.py  create_multiple_orders.py  create_order.py  deleteme.py  get_orders.py  sign_order.py
orbs_orderbook/: __init__.py  client.py  exceptions.py  order_signer.py  supportedTokens.json  types.py  utils.py
pythonsdk/: __init__.py  client.py  order_signer.py  signer.py  types.py
tests/: test_order_signer.py
