[tool.poetry]
name = "pythonsdk"
version = "0.1.0"
description = "Python SDK for the Orbs order book"
authors = ["Luke Rogerson <contact@lukerogerson.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package = "pythonsdk"
