[tool.poetry]
name = "orbs-orderbook-sdk"
version = "0.1.0"
description = "Python SDK for the Orbs order book"
authors = ["Luke Rogerson <contact@lukerogerson.me>"]
readme = "README.md"
packages = [
    { include = "pythonsdk" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
asyncio = "^3.4.3"
eth-account = "^0.10.0"
web3 = "^6.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
