[tool.poetry]
name = "orbs-orderbook-sdk"
version = "0.8.0"
description = "Python SDK for the Orbs order book"
authors = ["Luke Rogerson <contact@lukerogerson.me>"]
readme = "README.md"
packages = [
    { include = "orbs_orderbook" },
]
include = ["orbs_orderbook/supportedTokens.json"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
asyncio = "^3.4.3"
eth-account = "^0.10.0"
web3 = "^6.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
